[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_gpt_robotframework_plugin"
version = "0.0.2"
authors = [
  { name="DanielAron", email="daniel@rpamaker.com" },
]
description = "Robotframework plugin for Auto-GPT plugins."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DanielAron/Auto-GPT-robotframework"
"Bug Tracker" = "https://github.com/DanielAron/Auto-GPT-robotframework"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"